--- a/index.html
+++ b/index.html
@@ -8,28 +8,32 @@
 </head>
 <body>
     <div class="content">
-        <div class="content-top_category">Travel</div>
-        <h1 class="content-top_title">Donec sed odio dui. Cras mattis consectetur purus sit amet fermentum.
-        </h1>
-    </div>    
-    <div class="content-image">
-        <div class="content-image_item">
-            <img src="./img/light-man_copy.jpg" alt=""/>
+
+        <div class="content-top">
+            <div class="content-top_category">Travel</div>
+            <h1 class="content-top_title">Donec sed odio dui. Cras mattis consectetur purus </br> sit amet fermentum.</h1>
         </div>
+        
+    <div class="content_image">
+          <img src="./img/light-man_copy.jpg" alt=""/>
     </div>
+
     <div class="content-bottom_text">
         <p>Donec aredsed odio dui. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Morbi leo risus, porta ac consectetur ac, vestibulum at eros. Donec ullamcorper nulla non metus auctor fringilla.</p>
         <p>Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum. Aenean eu leo quam. Pellentesque ornare sem lacinia quam venenatis vestibulum.</p>
     </div>
+
     <div class="content-bottom_info">
-        <ul class="content-bottom_info">
+        <ul class="content-bottom_info_list">
             <li>Put on this page information about your product</li>
             <li>A detailed description of your product</li>
             <li>Tell us about the advantages and merits</li>
-            <li>Associate the page with the payment system</li>
+            <li><span>the page with the payment system</span></li>
         </ul>
     </div>
-    <a target="_blank" href="https://www.google.com.ua/" class="content-bottom_info_link">Full Story</a>
-    </div>    
+
+    <a target="_blank" href="https://www.google.com.ua/" class="content-bottom_info_link"><span>Full story</span></a>
+
+    </div>
 </body>
 </html>
